# rust-cqrs-sample-crud

./: .env  Cargo.toml
migrations/2020-04-30-140621_todos/: up.sql
src/: main.rs  schema.rs
src/app/: mod.rs  todos.rs
src/domain/: mod.rs  resolver.rs
src/domain/todos/: mod.rs  resolver.rs
src/domain/todos/commands/: create_todo.rs  mod.rs
src/domain/todos/model/: mod.rs  store.rs
src/domain/todos/queries/: get_todo.rs  get_todo_by_title.rs  mod.rs
