[package]
name = "cqrs-example"
version = "0.1.0"
authors = ["haradayoshiaki <y.team.kobe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json", "diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
auto_impl = {version = "~0.3", features=["nightly"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
anyhow = "1.0"